--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -115,6 +115,7 @@
 		<spring.boot.version>2.0.2.RELEASE</spring.boot.version>
 		<spring.security.test.version>5.0.5.RELEASE</spring.security.test.version>
 		<spring-cloud-config.version>2.0.0.RELEASE</spring-cloud-config.version>
+		<spring.retry.version>1.2.1.RELEASE</spring.retry.version>
 
 		<javax.validation-api.version>2.0.1.Final</javax.validation-api.version>
 		<hibernate.validator.version>6.0.12.Final</hibernate.validator.version>
