--- a/authentication/authentication-internal-service/pom.xml
+++ b/authentication/authentication-internal-service/pom.xml
@@ -7,9 +7,9 @@
 	<parent>
 		<groupId>io.mosip.authentication</groupId>
 		<artifactId>authentication-parent</artifactId>
-		<version>1.1.5-SNAPSHOT</version>
+		<version>1.1.5-rc1</version>
 	</parent>
-	<version>1.1.5-SNAPSHOT</version>
+	<version>1.1.5-rc1</version>
 	<artifactId>authentication-internal-service</artifactId>
 	<name>authentication-internal-service</name>
 	<properties>
