--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -74,7 +74,7 @@
 
 		<!-- Kernel components -->
 		<kernel-core.version>1.1.5-rc1</kernel-core.version>
-		<kernel-keymanager-service.version>1.1.5.1</kernel-keymanager-service.version>
+		<kernel-keymanager-service.version>1.1.5.1-SNAPSHOT</kernel-keymanager-service.version>
 		<kernel-idgenerator-tokenid.version>1.1.5-rc1</kernel-idgenerator-tokenid.version>
 		<kernel-idvalidator-uin.version>1.1.5-rc1</kernel-idvalidator-uin.version>
 		<kernel-idvalidator-vid.version>1.1.5-rc1</kernel-idvalidator-vid.version>
