--- a/authentication/authentication-service/pom.xml
+++ b/authentication/authentication-service/pom.xml
@@ -6,10 +6,9 @@
 	<parent>
 		<groupId>io.mosip.authentication</groupId>
 		<artifactId>authentication-parent</artifactId>
-		<version>1.1.5</version>
+		<version>1.1.5.1-SNAPSHOT</version>
 	</parent>
-	<version>1.1.5</version>
-
+	<version>1.1.5.1-SNAPSHOT</version>
 	<artifactId>authentication-service</artifactId>
 	<packaging>jar</packaging>
 
